[project]
name = "arcesse"
version = "0.1.0"
description = "Fetch websites behind Cloudflare protection"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
arcesse = "arcesse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcesse"]
